--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,6 @@
     <string name="network_error">Network error</string>
     <string name="popular_music">Popular music</string>
     <string name="starting">Starting player, please wait</string>
+    <string name="permission_required">Permission required!</string>
+    <string name="msg_perm_overlay">In the following screen, select your app from the list and grant \'Allow display over other apps\' permission.</string>
 </resources>
